install( FILES itkCartesianToRThetaTransform.h itkCartesianToRThetaTransform.txx
  itkRThetaToCartesianTransform.h itkRThetaToCartesianTransform.txx
  itkResampleRThetaToCartesianImageFilter.h
  itkResampleRThetaToCartesianImageFilter.txx
  DESTINATION ${ITK_INSTALL_PREFIX}/include/InsightToolkit/Common
  )
